--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -1,15 +1,49 @@
 <header>
 	<div class="container">
-		<h1>Banana Pancakes</h1>
+        <h1 class="center-align">Members Directory</h1>
 	</div>
 </header>
 
 <div class="container">
-	
+
+<div class="row">
+    <div class="input-field col s6 center-align">
+        <input id="first_name" type="text" class="validate">
+        <label for="first_name">search for a member, skill, or title....</label>
+    </div>
+</div>
+
+    <div class="row">
+        <div class="col m3">
+            <div class="card">
+                <div class="card-content member-preview">
+                    <img src="images/trenton.jpeg">
+                    <h4 class="member-name">Trenton Kennedy</h4>
+                </div>
+                <div class="card-action">
+                    <a href='#'>read more...</a>
+                </div>
+            </div>
+        </div>
+        <div class="col m3">
+            <div class="card">
+                <div class="card-content member-preview">
+                    <img src="images/chad.png">
+                    <h4 class="member-name">Chad Drummond</h4>
+                </div>
+                <div class="card-action">
+                    <a href='#'>read more...</a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
 	<ul>
     {{#each topics}}
     <li>{{ this.name }}</li>
     {{/each}}
 	</ul>
-	
+
 </div>
