Template: Add main nav and routing

--- a/app/views/templates/topic.hbs
+++ b/app/views/templates/topic.hbs
@@ -27,7 +27,7 @@
   </div>
 
   <div class="buttons">
-    <a class="waves-effect waves-light btn" href="/">Home</a>
+    <a class="waves-effect waves-light btn" href="#">Home</a>
   </div>
 	
 </div>
