--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -1,47 +1,79 @@
 <header>
-	<div class="container">
+    <div class="container">
         <h1 class="center-align">Members Directory</h1>
-	</div>
+    </div>
 </header>
 
 <div class="container">
 
-<div class="row">
-    <div class="input-field col s6 center-align">
-        <input id="first_name" type="text" class="validate">
-        <label for="first_name">search for a member, skill, or title....</label>
-    </div>
-</div>
-
     <div class="row">
+        <div class="input-field col s12 center-align">
+            <form>
+                <div class="input-field">
+                    <input id="search" type="text" required>
+                    <label for="search"><i class="mdi-action-search"></i> search for a member, skill, or
+                        title....</label>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col m3">
+            {{include "member"}}
+        </div>
+
         <div class="col m3">
             <div class="card">
-                <div class="card-content member-preview">
-                    <img src="images/trenton.jpeg">
-                    <h4 class="member-name">Trenton Kennedy</h4>
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="images/trenton.jpeg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Trenton Kennedy <i
+                            class="mdi-navigation-more-vert right"></i></span>
+
+                    <p>UI Developer</p>
                     <a href='#'>read more...</a>
                 </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Trenton Kennedy <i
+                            class="mdi-navigation-close right"></i></span>
 
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
             </div>
         </div>
         <div class="col m3">
             <div class="card">
-                <div class="card-content member-preview">
-                    <img src="images/chad.png">
-                    <h4 class="member-name">Chad Drummond</h4>
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="images/chad.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Chad Drummond<i class="mdi-navigation-more-vert right"></i></span>
+
+                    <p>Senior UI Developer</p>
                     <a href='#'>read more...</a>
                 </div>
-                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Chad Drummond <i
+                            class="mdi-navigation-close right"></i></span>
 
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
         </div>
 
-
-
     </div>
-	<ul>
-    {{#each topics}}
-    <li>{{ this.name }}</li>
-    {{/each}}
-	</ul>
 
+
+
+
+    <section class="topics">
+        <p>Select a topic to search for members by skill type</p>
+        <ul>
+            {{#each topics}}
+                <li><a href="#">{{ this.name }}</a></li>
+            {{/each}}
+        </ul>
+    </section>
 </div>
