--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -1,21 +1,20 @@
 <header>
     <div class="container">
-        <h1 class="center-align">Members Directory</h1>
+        <h1 class="center-align">Search Members</h1>
     </div>
 </header>
 
 <div class="container">
 
     <div class="row">
-        <div class="input-field col s12 center-align">
-            <form>
-                <div class="input-field">
+        <nav>
+            <div class="input-field col s12 center-align">
+                <div class="input-field member-search">
                     <input id="search" type="text" required>
-                    <label for="search"><i class="mdi-action-search"></i> search for a member, skill, or
-                        title....</label>
+                    <label for="search"><i class="mdi-action-search"></i></label>
                 </div>
-            </form>
-        </div>
+            </div>
+        </nav>
     </div>
     <div class="row">
         {{#times 10}}
