--- a/app/views/templates/partials/member.hbs
+++ b/app/views/templates/partials/member.hbs
@@ -6,14 +6,14 @@
 
         <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">
-                        Trenton Kennedy <i class="mdi-navigation-more-vert right"></i>
+                        {{ this.name }} <i class="mdi-navigation-more-vert right"></i>
                     </span>
-            <p>UI Developer</p>
+            <p>{{ this.jobTitle }}</p>
         </div>
 
         <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">
-                        Trenton Kennedy <i class="mdi-navigation-close right"></i>
+                        {{ this.name }} <i class="mdi-navigation-close right"></i>
                     </span>
 
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
