adding search button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,3 +29,11 @@ section.topics {
 nav {
   background-color: #ffa000;
 }
+
+.member-search {
+  margin-top: 0;
+}
+
+.search-filters .btn-large {
+  margin-top: 5px;
+}
