--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -7,14 +7,19 @@
 <div class="container">
 
     <div class="row">
-        <nav>
-            <div class="input-field col s12 center-align">
-                <div class="input-field member-search">
-                    <input id="search" type="text" required>
-                    <label for="search"><i class="mdi-action-search"></i></label>
-                </div>
+
+            <div class="col s8 input-field member-search">
+                <nav>
+                    <div class="input-field">
+                        <input id="search" type="text" required>
+                        <label for="search"><i class="mdi-action-search"></i></label>
+                    </div>
+                </nav>
             </div>
-        </nav>
+
+        <div class="col s4 search-filters">
+        <a class="waves-effect waves-light btn-large">Button</a>
+        </div>
     </div>
     <div class="row">
 
