Gravatar image helpers: Fixes #2

--- a/app/views/templates/partials/member.hbs
+++ b/app/views/templates/partials/member.hbs
@@ -1,7 +1,7 @@
 <div id="member-partial">
     <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/trenton.jpeg">
+            <img class="activator" src="{{ gravatarUrl this.email '200' }}">
         </div>
 
         <div class="card-content">
