--- a/app/views/templates/profile.hbs
+++ b/app/views/templates/profile.hbs
@@ -1,3 +1,4 @@
+<img src="{{gravatarUrl user.email '200'}}" alt=""/>
 <h1>{{ user.name }} <br/> <small>{{ user.email }}</small></h1>
 <h2>{{ user.jobTitle }}</h2>
 <a href="#logout">Logout</a>
