style member search bar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,6 +34,14 @@ nav {
   margin-top: 0;
 }
 
+.member-search i {
+  font-size: 24px;
+  padding-left: 10px;
+}
+
+.member-search .input-field {
+  padding-left: 20px;
+}
 .search-filters .btn-large {
   margin-top: 5px;
 }
