--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -11,14 +11,14 @@
             <div class="col s8 input-field member-search">
                 <nav>
                     <div class="input-field">
-                        <input id="search" type="text" required>
+                        <input id="search" type="text" placeholder="Search by user name, job title, or skill...">
                         <label for="search"><i class="mdi-action-search"></i></label>
                     </div>
                 </nav>
             </div>
 
         <div class="col s4 search-filters">
-        <a class="waves-effect waves-light btn-large">Button</a>
+        <a class="waves-effect waves-light btn-large">Search</a>
         </div>
     </div>
     <div class="row">
