resolve merge conflicts

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,3 +45,21 @@ nav {
 .search-filters .btn-large {
   margin-top: 5px;
 }
+
+.profile-detail .card {
+  padding: 25px;
+}
+
+.profile-detail .edit-profile {
+  float: right;
+}
+
+.edit-profile a {
+  color: #42a5f5;
+  text-transform: initial;
+}
+
+.profile-detail .skills-section {
+  border-top: 2px solid #bdbdbd;
+  margin-top: 50px;
+}
