--- a/app/views/templates/partials/member.hbs
+++ b/app/views/templates/partials/member.hbs
@@ -15,7 +15,8 @@
                     <span class="card-title grey-text text-darken-4">
                         {{ this.name }} <i class="mdi-navigation-close right"></i>
                     </span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>information about this product that is only revealed once clicked on.</p>
+            <a href="#profile/{{this.objectId}}">user profile</a>
         </div>
     </div>
 </div>
