--- a/app/views/templates/profile.hbs
+++ b/app/views/templates/profile.hbs
@@ -1,4 +1,30 @@
-<img src="{{gravatarUrl user.email '200'}}" alt=""/>
-<h1>{{ user.name }} <br/> <small>{{ user.email }}</small></h1>
-<h2>{{ user.jobTitle }}</h2>
-<a href="#logout">Logout</a>
+{{#if user}}
+<div class="container profile-detail">
+    <div class="card">
+        <div class="row">
+            <div class="col s3">
+                <img src="{{gravatarUrl user.email '200'}}"/>
+            </div>
+            <div class="col s8">
+                {{#if isOwner}}
+                <p class="edit-profile">
+                    <a href=""><i class="mdi-image-edit"></i> edit profile </a>
+                    <a href="#logout">logout</a>
+                </p>
+                {{/if}}
+                <h4><i class="mdi-action-perm-identity"></i> {{ user.name }}</h4>
+
+                <p><i class="mdi-communication-email"></i> {{ user.email }}</p>
+
+                <p><i class="mdi-action-star-rate"></i> {{ user.jobTitle }}</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <section class="skills-section">
+            <h4>Member Skills</h4>
+            </section>
+        </div>
+    </div>
+</div>
+{{/if}}
