create edit profile event

--- a/app/views/templates/profile.hbs
+++ b/app/views/templates/profile.hbs
@@ -7,8 +7,8 @@
             </div>
             <div class="col s8">
                 {{#if isOwner}}
-                <p class="edit-profile">
-                    <a href=""><i class="mdi-image-edit"></i> edit profile </a>
+                <p class="profile-settings">
+                    <a class="edit-profile" href=""><i class="mdi-image-edit"></i> edit profile </a>
                     <a href="#logout">logout</a>
                 </p>
                 {{/if}}
