--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,11 +50,11 @@ nav {
   padding: 25px;
 }
 
-.profile-detail .edit-profile {
+.profile-detail .profile-settings {
   float: right;
 }
 
-.edit-profile a {
+.profile-settings a {
   color: #42a5f5;
   text-transform: initial;
 }
