--- a/app/views/templates/nav.hbs
+++ b/app/views/templates/nav.hbs
@@ -3,7 +3,8 @@
     <a href="#" class="brand-logo right">Members Directory</a>
     <ul id="nav-mobile" class="left">
       {{#if user}}
-        <li><a href="#profile/{{ user.objectId }}">Logged in as: {{ user.name }}</a></li>
+        <li><a href="#profile/{{ user.objectId }}" class="blue lighten-2">Logged in as: {{ user.name }}</a></li>
+        <li><a href="#logout" class="red lighten-1">Logout</a></li>
       {{else}}
         <li><a href="#login">Login</a></li>
       {{/if}}
