--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -10,8 +10,8 @@
 
             <div class="col s8 input-field member-search">
                 <nav>
-                    <div class="input-field">
-                        <input id="search" type="text" placeholder="Search by user name, job title, or skill...">
+                    <div id="home-search" class="input-field">
+                        <input class="typeahead" id="search" type="text" placeholder="Search by user name, job title, or skill...">
                         <label for="search"><i class="mdi-action-search"></i></label>
                     </div>
                 </nav>
