--- a/app/views/templates/skills.hbs
+++ b/app/views/templates/skills.hbs
@@ -1,6 +1,6 @@
 <header>
 	<div class="container">
-		<h1>Add Skills</h1>
+		<h3>Add Skills <label>to your profile</label></h3>
 	</div>
 </header>
 
