update typeahead feature

--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -11,7 +11,7 @@
             <div class="col s8 input-field member-search">
                 <nav>
                     <div id="home-search" class="input-field">
-                        <input class="typeahead" id="search" type="text" placeholder="Search by user name, job title, or skill...">
+                        <input class="typeahead" id="search-bar" type="text" placeholder="Search by user name, job title, or skill...">
                         <label for="search"><i class="mdi-action-search"></i></label>
                     </div>
                 </nav>
