--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,7 +102,7 @@ input#search-bar {
   outline: none;
 }
 
-.tt-query { /* UPDATE: newer versions use tt-input instead of tt-query */
+.tt-query {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
@@ -127,7 +127,7 @@ input#search-bar {
   line-height: 24px;
 }
 
-.tt-suggestion.tt-is-under-cursor { /* UPDATE: newer versions use .tt-suggestion.tt-cursor */
+.tt-suggestion.tt-is-under-cursor {
   color: #fff;
   background-color: #0097cf;
 
@@ -135,4 +135,18 @@ input#search-bar {
 
 .tt-suggestion p {
   margin: 0;
+}
+
+ul.skill-types {
+  background-color: #eeeeee;
+  padding: 10px;
+}
+
+.main-content {
+  width: 90%;
+  margin: auto;
+}
+
+.card .card-title {
+  font-size: 20px;
 }
