--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -4,42 +4,42 @@
     </div>
 </header>
 
-<div class="container">
 
+<div class="main-content">
     <div class="row">
 
-            <div class="col s8 input-field member-search">
-                <nav>
-                    <div id="home-search" class="input-field">
-                        <input class="typeahead" id="search-bar" type="text" placeholder="Search by user name, job title, or skill...">
-                        <label for="search"><i class="mdi-action-search"></i></label>
-                    </div>
-                </nav>
-            </div>
+        <div class="col s8 input-field member-search">
+            <nav>
+                <div id="home-search" class="input-field">
+                    <input class="typeahead" id="search-bar" type="text"
+                           placeholder="Search by user name, job title, or skill...">
+                    <label for="search"><i class="mdi-action-search"></i></label>
+                </div>
+            </nav>
+        </div>
 
         <div class="col s4 search-filters">
-        <a class="waves-effect waves-light btn-large">Search</a>
+            <a class="waves-effect waves-light btn-large">Search</a>
         </div>
     </div>
     <div class="row">
-
-        {{#each users}}
-          <div class="col m3">
-            {{include "member" this}}
-          </div>
-        {{else}}
-          <h2>No Members, bro!</h2>
-        {{/each}}
-
-    </div>
-
-
-    <section class="topics">
-        <p>Select a topic to search for members by skill type</p>
-        <ul>
-            {{#each topics}}
-                <li><a href="#">{{ this.name }}</a></li>
+        <div class="col m9">
+            {{#each users}}
+                <div class="col m3">
+                    {{include "member" this}}
+                </div>
+            {{else}}
+                <h2>No Members, bro!</h2>
             {{/each}}
-        </ul>
-    </section>
+
+        </div>
+        <div class="col m3">
+            <ul class="collection skill-types">
+                <li class="collection-header"><h4>Skills</h4></li>
+                {{#each topics}}
+                    <li><a href="#">{{ this.name }}</a></li>
+                {{/each}}
+            </ul>
+        </div>
+    </div>
 </div>
