--- a/app/views/templates/home.hbs
+++ b/app/views/templates/home.hbs
@@ -11,8 +11,7 @@
         <div class="col s8 input-field member-search">
             <nav>
                 <div id="home-search" class="input-field">
-                    <input class="typeahead" id="search-bar" type="text"
-                           placeholder="Search by user name, job title, or skill...">
+                    <input class="typeahead" id="search-bar" type="text" placeholder="Search by user name, job title, or skill...">
                     <label for="search"><i class="mdi-action-search"></i></label>
                 </div>
             </nav>
@@ -35,9 +34,9 @@
         </div>
         <div class="col m3">
             <ul class="collection skill-types">
-                <li class="collection-header"><h4>Skills</h4></li>
+                <li class="collection-header"><h4>Skill Types</h4></li>
                 {{#each topics}}
-                    <li><a href="#">{{ this.name }}</a></li>
+                    <li><a href="#" class="skill-text">{{ this.name }}</a></li>
                 {{/each}}
             </ul>
         </div>
