--- a/apps/backbone/app/views/templates/home.hbs
+++ b/apps/backbone/app/views/templates/home.hbs
@@ -1,44 +1,70 @@
-<header>
-    <div class="container">
-        <h1 class="center-align">Search Members</h1>
-    </div>
-</header>
-
-
 <div class="main-content">
     <div class="row">
 
-        <div class="col s8 input-field member-search">
-            <nav>
-                <div id="home-search" class="input-field">
-                    <input class="typeahead" id="search-bar" type="text" placeholder="Search by user name, job title, or skill...">
-                    <label for="search"><i class="mdi-action-search"></i></label>
+        <div id="home-search">
+            <nav class="member-search">
+                <div class="input-field">
+                    <input class="typeahead" id="search-bar" type="text"
+                           placeholder="Search by name, job title, or skill...">
                 </div>
             </nav>
+            <a class="waves-effect waves-light btn-large"><i class="mdi-action-search"></i></a>
+        </div>
+        <div class="search-filters">
+            <p>filters results:</p>
+            <p>
+                <input type="checkbox" id="checkMembers" checked="checked"/>
+                <label for="checkMembers">members</label>
+            </p>
+            <p>
+                <input type="checkbox" id="checkSkills" checked="checked" />
+                <label for="checkSkills">skills</label>
+            </p>
+            <p>
+                <input type="checkbox" id="checkRoles" checked="checked"/>
+                <label for="checkRoles">roles</label>
+            </p>
         </div>
 
-        <div class="col s4 search-filters">
-            <a class="waves-effect waves-light btn-large">Search</a>
-        </div>
     </div>
     <div class="row">
-        <div class="col m9">
-            {{#each users}}
-                <div class="col m3">
-                    {{include "member" this}}
-                </div>
-            {{else}}
-                <h2>No Members, bro!</h2>
-            {{/each}}
+        <div class="col m4">
+            <h4 class="category-title">members</h4>
+            <ul class="collection">
+                {{#each users}}
+                    <li class="collection-item avatar">
+                        <img src="{{ gravatarUrl this.email '200' }}" alt="" class="circle">
+                        <span class="title"> {{ this.name }}</span>
 
-        </div>
-        <div class="col m3">
-            <ul class="collection skill-types">
-                <li class="collection-header"><h4>Skill Types</h4></li>
-                {{#each topics}}
-                    <li><a href="#" class="skill-text">{{ this.name }}</a></li>
+                        <p>{{ this.jobTitle }}</p>
+                        <a href="#profile/{{this.objectId}}" class="secondary-content">view profile</a>
+                    </li>
+                {{else}}
+                    <h2>No Results, bro!</h2>
                 {{/each}}
             </ul>
         </div>
+        <div class="col m4">
+            <h4 class="category-title">skills</h4>
+            <ul class="collection">
+                {{#each topics}}
+                    <li class="collection-item">
+                        <span class="title"> {{ this.name }}</span>
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
+
+        <div class="col m4">
+            <h4 class="category-title">roles</h4>
+            <ul class="collection">
+                {{#each users}}
+                    <li class="collection-item">
+                        <span class="title"> {{ this.jobTitle }}</span>
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
+
     </div>
 </div>
