--- a/apps/backbone/app/views/templates/home.hbs
+++ b/apps/backbone/app/views/templates/home.hbs
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col m4">
             <h4 class="category-title">members</h4>
-            <ul class="collection">
+            <ul class="collection" id="member-results">
                 {{#each users}}
                     <li class="collection-item avatar">
                         <img src="{{ gravatarUrl this.email '200' }}" alt="" class="circle">
@@ -46,7 +46,7 @@
         </div>
         <div class="col m4">
             <h4 class="category-title">skills</h4>
-            <ul class="collection">
+            <ul class="collection" id="skill-results">
                 {{#each topics}}
                     <li class="collection-item">
                         <span class="title"> {{ this.name }}</span>
@@ -57,7 +57,7 @@
 
         <div class="col m4">
             <h4 class="category-title">roles</h4>
-            <ul class="collection">
+            <ul class="collection" id="role-results">
                 {{#each users}}
                     <li class="collection-item">
                         <span class="title"> {{ this.jobTitle }}</span>
