update readme content to be more informative about the project's motives.

--- a/apps/backbone/app/views/templates/home.hbs
+++ b/apps/backbone/app/views/templates/home.hbs
@@ -37,7 +37,7 @@
                         <span class="title"> {{ this.name }}</span>
 
                         <p>{{ this.jobTitle }}</p>
-                        <a href="#profile/{{this.objectId}}" class="secondary-content">view profile</a>
+                        <a href="#profile/{{this.objectId}}" class="secondary-content">profile</a>
                     </li>
                 {{else}}
                     <h2>No Results, bro!</h2>
