--- a/app/scss/pages/_splashPage.scss
+++ b/app/scss/pages/_splashPage.scss
@@ -20,3 +20,7 @@
   ),
   url('https://images.unsplash.com/photo-1428851473740-05d09c5f70c0?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=62500fea7cb7da128aea1b5e1dba3011');
 }
+
+.site-about {
+  padding-top: 10%;
+}
